--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "four-card-feature-section-master",
   "private": true,
   "version": "0.0.0",
+  "main": "main.jsx",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,6 +10,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.4",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
