--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.4",
+    "sass": "^1.66.1",
     "vite": "^4.4.5"
   },
   "dependencies": {
